Add missing header & drop Java 11 List.of()